Revert "Fix spacing for key selling points on mobile"
This reverts commit 8c140318baf5735c69bdabf48fd66aa6def1b8e9.

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -132,6 +132,19 @@
         }
     }
 
+    @media (max-width: 600px) {
+        .key-points {
+            display: block;
+
+            p {
+                margin-bottom: 16px;
+            }
+        }
+        section {
+            padding: 12px;
+        }
+    }
+
     .homepage__key_point_title {
         font-size: 20px;
         margin-bottom: 8px;
@@ -155,22 +168,4 @@
             margin-bottom: 0;
         }
     }
-
-    @media (max-width: 600px) {
-        .key-points {
-            display: block;
-
-            p {
-                margin-bottom: 16px;
-            }
-        }
-        section {
-            padding: 12px;
-        }
-        .homepage__key_point_title {
-            margin-top: 8px;
-            margin-bottom: 0px;
-        }
-    }
-
 }
